sprint 3 movie/tv deatils and bug report features. Tests were made to help with bug fixing, but they can be discarded
